# deck-of-cats

./: .gitignore  AGENTS.md  README.md  changelog.md  game.js  index.html  loop.md  rules.md  todo.md
bot/: .env.example  .venv  ARCHITECTURE_PLAN.md  IDEOLOGY.md  README.md  TELEGRAM_BOT_UX_PLAN.md  pyproject.toml
bot/app/: bootstrap.py  di.py  main_all_in_one.py  main_bot_api.py  main_worker.py  settings.py
bot/app/shared/: enums.py  errors.py  security.py  time.py
bot/docs/: codex-playwright-validation-guide.md  codex-python-validation-guide.md
bot/personalities/: README.md  chat-agent.md  designer.md  developer.md  game-designer.md  lead.md  marketing.md  researcher.md  tester.md  workflow.md
bot/personalities/proposals/: README.md
bot/personalities/releases/: README.md
bot/personalities/research/: README.md
bot/personalities/sprints/: README.md
bot/personalities/test-reports/: 0001-telegram-chat-model-scope.md  0002-telegram-chat-model-scope-retest.md  0003-telegram-chat-model-scope-final.md  README.md
bot/personalities/ui-specs/: README.md
bot/tests/integration/: test_codex_lead_review_smoke.py  test_codex_personality_resume.py  test_codex_smoke_sum.py  test_codex_validate_homepage_playwright.py
bot/tests/unit/: test_accept_merge_decision.py  test_base_branch_resolver.py  test_callback_alerts.py  test_chat_agent_adapter.py  test_chat_agent_parser.py  test_codex_cli_adapter.py  test_codex_json_output_parser.py  test_dev_cycle_orchestrator.py  test_github_vcs_adapters.py  test_launch_research_project.py  test_lead_review_parser.py  (+13 more)
js/: game.js  (+16 more)
(+148 files in other folders)
