[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deck-of-cats-telegram-dev-bot"
version = "0.1.0"
description = "Telegram development orchestrator bot for Deck of Cats"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.21.0,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "structlog>=24.2.0,<26.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
